--- a/index.html
+++ b/index.html
@@ -158,82 +158,81 @@
     </section>
 
     <!-- Stats Section -->
-    <section id="stats" class="stats-section">
-        <div class="container">
-            <h2 class="section-title">Impact & Achievements</h2>
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-number" data-target="50000">0</div>
-                    <div class="stat-label">YouTube Subscribers</div>
-                    <div class="stat-icon">
-    			<svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        			<path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
-        			<circle cx="9" cy="7" r="4"/>
-        			<path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
-        			<path d="M16 3.13a4 4 0 0 1 0 7.75"/>
-    			</svg>
-		</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number" data-target="2500000">0</div>
-                    <div class="stat-label">Total Views</div>
-                    <div class="stat-icon">
-    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
-        <circle cx="12" cy="12" r="3"/>
-    </svg>
-</div>
-
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number" data-target="150">0</div>
-                    <div class="stat-label">Video Tutorials</div>
-                    <div class="stat-icon">
-    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <polygon points="23 7 16 12 23 17 23 7"/>
-        <rect x="1" y="5" width="15" height="14" rx="2" ry="2"/>
-        <circle cx="8.5" cy="12" r="2" fill="currentColor" opacity="0.3"/>
-    </svg>
-</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-number" data-target="100000">0</div>
-                    <div class="stat-label">Students Taught</div>
-                    <div class="stat-icon">
-    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M22 10v6M2 10l10-5 10 5-10 5z"/>
-        <path d="M6 12v5c3 3 9 3 12 0v-5"/>
-    </svg>
-</div>
+<section id="stats" class="stats-section">
+    <div class="container">
+        <h2 class="section-title">Impact & Achievements</h2>
+        <div class="stats-grid">
+            <div class="stat-card">
+                <div class="stat-number" id="subscriberCount" data-target="50000">0</div>
+                <div class="stat-label">YouTube Subscribers</div>
+                <div class="stat-icon">
+                    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                        <circle cx="9" cy="7" r="4"/>
+                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                        <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                    </svg>
                 </div>
             </div>
-            
-            <!-- Live YouTube Stats Widget -->
-            <div class="youtube-widget">
-                <h3>Live Channel Stats</h3>
-                <div class="youtube-stats">
-                    <div class="yt-stat">
-                        <span class="yt-label">Latest Upload</span>
-                        <span class="yt-value" id="latest-video">Loading...</span>
-                    </div>
-                    <div class="yt-stat">
-                        <span class="yt-label">Subscribers</span>
-                        <span class="yt-value" id="subscriber-count">Loading...</span>
-                    </div>
-                    <div class="yt-stat">
-                        <span class="yt-label">Total Videos</span>
-                        <span class="yt-value" id="video-count">Loading...</span>
-                    </div>
-                </div>
-                <a href="https://youtube.com/@ctf-sec/" class="yt-subscribe-btn" target="_blank">
-                    <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
-                        <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+            <div class="stat-card">
+                <div class="stat-number" id="viewCount" data-target="2500000">0</div>
+                <div class="stat-label">Total Views</div>
+                <div class="stat-icon">
+                    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+                        <circle cx="12" cy="12" r="3"/>
                     </svg>
-                    Subscribe on YouTube
-                </a>
+                </div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number" id="videoCount" data-target="150">0</div>
+                <div class="stat-label">Video Tutorials</div>
+                <div class="stat-icon">
+                    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <polygon points="23 7 16 12 23 17 23 7"/>
+                        <rect x="1" y="5" width="15" height="14" rx="2" ry="2"/>
+                        <circle cx="8.5" cy="12" r="2" fill="currentColor" opacity="0.3"/>
+                    </svg>
+                </div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number" data-target="100000">0</div>
+                <div class="stat-label">Students Taught</div>
+                <div class="stat-icon">
+                    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M22 10v6M2 10l10-5 10 5-10 5z"/>
+                        <path d="M6 12v5c3 3 9 3 12 0v-5"/>
+                    </svg>
+                </div>
             </div>
         </div>
-    </section>
+        
+        <!-- Live YouTube Stats Widget -->
+        <div class="youtube-widget">
+            <h3>Live Channel Stats</h3>
+            <div class="youtube-stats">
+                <div class="yt-stat">
+                    <span class="yt-label">Latest Upload</span>
+                    <span class="yt-value" id="latestVideo">Loading...</span>
+                </div>
+                <div class="yt-stat">
+                    <span class="yt-label">Subscribers</span>
+                    <span class="yt-value" id="liveSubscribers">Loading...</span>
+                </div>
+                <div class="yt-stat">
+                    <span class="yt-label">Total Videos</span>
+                    <span class="yt-value" id="liveTotalVideos">Loading...</span>
+                </div>
+            </div>
+            <a href="https://youtube.com/@ctf-sec/" class="yt-subscribe-btn" target="_blank">
+                <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
+                    <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                </svg>
+                Subscribe on YouTube
+            </a>
+        </div>
+    </div>
+</section>
 
     <!-- Main Content -->
     <main id="videos">
@@ -536,3 +535,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
