--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>r007us3r | Ethical Hacking & Cybersecurity</title>
+    <title>r007us3r | CTF Security</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="description" content="Learn ethical hacking and Python scripting through engaging YouTube tutorials. CTF Security provides free, professional cybersecurity training.">
@@ -540,6 +540,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
