--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8">
     <title>r007us3r | CTF Security</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="description" content="Learn ethical hacking and Python scripting through engaging YouTube tutorials. CTF Security provides free, professional cybersecurity training.">
-    <meta property="og:title" content="r007us3r | Ethical Hacking & Cybersecurity">
+    <meta property="og:title" content="r007us3r | CTF Security | Ethical Hacking & Cybersecurity">
     <meta property="og:description" content="Professional cybersecurity training and ethical hacking tutorials">
     <meta property="og:url" content="https://r007us3r.github.io/">
     
@@ -540,6 +539,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
